# clas12Tags

.github/workflows/: ntracs_metrics.yml
ci/: profile_gemc.sh
source/: SConstruct  meson.build
source/detector/: meson.build
source/frequencySyncSignal/: frequencySyncSignal.cc  frequencySyncSignal.h
source/gui/: g4dialog.cc  meson.build
source/hitprocess/: counter_hitprocess.cc  flux_hitprocess.cc  meson.build  mirror_hitprocess.cc
source/hitprocess/GlueX/: CVRT_hitprocess.cc
source/hitprocess/HPS/: ECAL_hitprocess.cc  SVT_hitprocess.cc  muon_hodo_hitprocess.cc
source/hitprocess/bdx/: cormo_hitprocess.cc  crs_hitprocess.cc  veto_hitprocess.cc
source/hitprocess/clas12/: IC_hitprocess.cc  band_hitprocess.cc  cnd_hitprocess.cc  ctof_hitprocess.cc  dc_hitprocess.cc  ecal_hitprocess.cc  ft_cal_hitprocess.cc  ft_hodo_hitprocess.cc  ftof_hitprocess.cc  htcc_hitprocess.cc  ltcc_hitprocess.cc  rich_hitprocess.cc  rtpc_hitprocess.cc
source/hitprocess/clas12/alert/: ahdc_hitprocess.cc  alertshell_hitprocess.cc  atof_hitprocess.cc
source/hitprocess/clas12/micromegas/: BMT_hitprocess.cc  BMT_hitprocess.h  FMT_hitprocess.cc  ftm_hitprocess.cc
source/hitprocess/clas12/recoil/: recoil_hitprocess.cc
source/hitprocess/clas12/svt/: bst_hitprocess.cc
source/hitprocess/clas12/uRwell/: uRwell_hitprocess.cc
source/hitprocess/eic/: eic_compton_hitprocess.cc  eic_dirc_hitprocess.cc  eic_ec_hitprocess.cc  eic_preshower_hitprocess.cc  eic_rich_hitprocess.cc
source/hitprocess/injector/: bubble_hitprocess.cc
source/meson/: clas12_cmag.pc  install_geant4_pkgconfig.py  install_geant4_root_pkgconfig.py  meson.build
source/output/: hipoSchemas.cc  hipo_output.cc  outputFactory.cc  outputFactory.h  txt_simple_output.cc
source/sensitivity/: meson.build
source/src/: MEventAction.cc
source/subprojects/: ccdb.wrap
